# SimpleTFTP

./: CMakeLists.txt  ClientSocket.cpp  ClientSocket.h  DefineType.h  README.md  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h  TFTPClient.cpp  TFTPServer.cpp  log.cpp  log.h
